--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -51,7 +51,7 @@
       "makingMusic": "Musizieren",
       "photography": "Fotografie",
       "imageEditing": "Bildbearbeitung",
-      "vectorGraphicDesign": "Vektorgrafik-Design",
+      "vectorGraficDesign": "Vektorgrafik-Design",
       "calligraphy": "Kalligrafie",
       "jewelryDesign": "Schmuckdesign"
     },
