headerbilder finalisieren und ersetzen

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -9,7 +9,13 @@
   "headerAltText": {
     "plantBase": "Übersicht der PlantBase-Webanwendung mit Funktionen zur Pflanzenpflege, Bewässerungsplänen und Community-Bereich für Nutzer:innen.",
     "invent": "Visueller Überblick über das überarbeitete Corporate Design und vielfältige Printprodukte für INVENT.",
-    "republic": "Stimmungsvolle Innenaufnahme mit Fokus auf Licht, Möblierung und Raumwirkung."
+    "republic": "Stimmungsvolle Innenaufnahme mit Fokus auf Licht, Möblierung und Raumwirkung.",
+    "redlink": "Modernisierter Markenauftritt der Redlink GmbH mit Website und Printmaterialien.",
+    "more": "Digitale Plattform zur Datenerhebung und Analyse in der Gesundheitsforschung.",
+    "iris": "Spielkonzept zum Alltag mit Sehbehinderung aus Sicht einer blinden Journalistin.",
+    "rouka": "3D-Fantasycharakter, modelliert mit ZBrush und Maya.",
+    "prag": "HDR-Landschaftsfotografie von Prag bei Tageslicht.",
+    "career": "Headerbild zum Thema Karriere."
   },
   "contact": {
     "title": "Kontaktiere mich!",
