--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -9,7 +9,13 @@
   "headerAltText": {
     "plantBase": "Overview of the PlantBase web application showcasing plant care features, watering schedules, and user community tools",
     "invent": "Visual overview of the redesigned corporate identity and diverse print materials created for INVENT.",
-    "republic": "Atmospheric interior shot highlighting lighting, furnishings, and spatial mood."
+    "republic": "Atmospheric interior shot highlighting lighting, furnishings, and spatial mood.",
+    "redlink": "Modernized brand identity of Redlink GmbH with website and print materials.",
+    "more": "Digital platform for data collection and analysis in health research",
+    "iris": "Game concept exploring everyday life with visual impairment through a blind journalist’s perspective.",
+    "rouka": "3D fantasy character modeled with ZBrush and Maya.",
+    "prag": "HDR landscape photograph of Prague in daylight.",
+    "career": "Career-themed header image with a modern, professional look."
   },
   "contact": {
     "title": "Get in Touch!",
